--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Flask==1.0
-Flask-Cors==3.0.2
-line-bot-sdk==1.5.0
-schedule==0.5.0
-beautifulsoup4==4.5.3
+Flask>=1.0
+line-bot-sdk>=1.5.0
+schedule>=0.5.0
+beautifulsoup4>=4.5.3
